--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 
 <html lang="es">
@@ -6,24 +5,73 @@
        <meta charset="UTF-8">
        <meta name="viewport"
 content="width=device-width,intial-scale=1.0">
-    <title>M</title>
+    <title>Meu portfólio</title>
     <Link rel="stylesheet" href="style.css">
     </head>
     <body>
        <header>
-           <h1>Nome</h1>
+           <h1>Meu Nome</h1>
            <nav>
             <ul>
-             <li><a href="#about">TTT</a></li>   
-            <li><a href="#Project">tttt</a></li>
-            <li><a href="#contact">C</a></li>
+             <li><a href="#about">Sobre Mim</a></li>   
+            <li><a href="#Project">projeto</a></li>
+            <li><a href="#contact">Contato</a></li>
             </ul>
            </nav>
        </header>
 
     <section id="about">
-
-        
+     <h2>Sobre Mim</h2>
+      <p>Óla,sou Jesus Fabian Mogollón Flores, estudo ciência da computação. Minha experiência no curso ésobre criação de jogos e cybersecurity.
+        Eu gosto de jogar futebol e basquete.
+      </p>
     </section>
 
+    <section id="projects">
+      <h2>Projetos</h2>
+      <div class="project">
+        <h3>Projeto 1</h3>
+         <p>Trata-se de fazer uma descrição sobre mim.
+
+         </p>
+      </div>
+      <!--Adicione mais projetos aqui-->
+    </section>
+    <section id="contact">
+       <h2>Contatos</h2>
+       <p>Você pode me encontrar através
+       <a href="fabianmogollon744@gmail.com">Meu e-mail</a>
+       </p>
+    </section>
+
+    <footer>
+     <p>&copy;2024 Meu Nome</p>
+
+     </footer>
     </body>
+    </html>
+
+    body{font-family: Arial, sans-serif; line-height: 1.6;margin: 0; padding:0;}
+
+    header{background: #333; color:#fff; padding:1 em 0; text-align: centre;}
+
+    nav ul{list-style:none; padding:0;}
+
+    nav ul li{ display: inline;margin: 0 15px;}
+
+    nav ul li <a>color: #fff; text-decoration:none;</a>
+
+    section{padding:20 px;}
+
+    .project{margin-bottom:20 px}
+
+    footer{background:#333:color:#fff;text-align:centre; padding:10px 0;position: absolute;width:100%; bottom:0;}
+
+     <div class= "project">
+      <h3>Projeto 3</h3>
+      <imag src=""alt=Descrição>
+      <p>Descrição do projeto 1.<a href="link/para/projeto 1">Mais informação</a>
+      
+      </p>
+
+     </div>
