--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@ content="width=device-width,intial-scale=1.0">
     </head>
     <body>
        <header>
-           <h1>Meu Nome</h1>
+           <h1>Nome</h1>
+           <h1>Jesus Fabian Mogollón Flores</h1>
            <nav>
             <ul>
              <li><a href="#about">Sobre Mim</a></li>   
@@ -27,13 +28,20 @@ content="width=device-width,intial-scale=1.0">
       </p>
     </section>
 
+
     <section id="projects">
       <h2>Projetos</h2>
       <div class="project">
         <h3>Projeto 1</h3>
          <p>Trata-se de fazer uma descrição sobre mim.
-
          </p>
+         <b>Dados</b>
+         <ol>Idade: 17 anos</ol>
+         <ol>Passatempo:Jogar videogames</ol>
+         <ol>habilidade:jogar futebol e basquete</ol>
+         <ol>Curso: Ciência da computação</ol>
+         <ol>Comida favorita: Hamburger</ol>
+         <ol>Cor favorito:Vermelho</ol>
       </div>
       <!--Adicione mais projetos aqui-->
     </section>
@@ -44,34 +52,19 @@ content="width=device-width,intial-scale=1.0">
        </p>
     </section>
 
+    </body>
     <footer>
-     <p>&copy;2024 Meu Nome</p>
+     <p>&copy;2024 portfólio</p>
 
      </footer>
     </body>
     </html>
 
-    body{font-family: Arial, sans-serif; line-height: 1.6;margin: 0; padding:0;}
-
-    header{background: #333; color:#fff; padding:1 em 0; text-align: centre;}
-
-    nav ul{list-style:none; padding:0;}
-
-    nav ul li{ display: inline;margin: 0 15px;}
-
-    nav ul li <a>color: #fff; text-decoration:none;</a>
-
-    section{padding:20 px;}
-
-    .project{margin-bottom:20 px}
-
-    footer{background:#333:color:#fff;text-align:centre; padding:10px 0;position: absolute;width:100%; bottom:0;}
-
      <div class= "project">
       <h3>Projeto 3</h3>
       <imag src=""alt=Descrição>
       <p>Descrição do projeto 1.<a href="link/para/projeto 1">Mais informação</a>
-      
+
       </p>
 
      </div>
